@@ -2729,7 +2729,7 @@ static int filesystem_listdir_recursive(lua_State *L)
         include_prefix = lua_toboolean(L, 3);
     std::map<std::string, bool> files;
     int err = DFHack::Filesystem::listdir_recursive(dir, files, depth, include_prefix);
-    if (err != -1) {
+    if (err != 0 && err != -1) {
         lua_pushnil(L);
         lua_pushstring(L, strerror(err));
         lua_pushinteger(L, err);
