@@ -46,6 +46,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `buildingplan`: items in the item selection dialog should now use the same item quality symbols as the base game
 - Mods: scripts in mods that are only in the steam workshop directory are now accessible. this means that a script-only mod that you never mark as "active" when generating a world will still receive automatic updates and be usable from in-game
 - Mods: scripts from only the most recent version of an installed mod are added to the script path
+- Mods: give active mods a chance to reattach their load hooks when a world is reloaded
 - `gui/control-panel`: bugfix services are now enabled by default
 
 ## Documentation
